<resources>
    <string name="app_name">Aplace</string>
    <string name="text_no_data">No data available</string>
    <string name="text_retrieving_data">Retrieving data &#8023;</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="txt_show_all_places_on_map">Show all places on map</string>
    <string name="text_place_name">Place name</string>
    <string name="text_place_address">Place address</string>
    <string name="text_place_description">Place description</string>
    <string name="hint_fill_in_place_name">Fill in place name</string>
    <string name="hint_fill_in_place_address">Fill in place address</string>
    <string name="hint_fill_in_place_description">Fill in place description</string>
    <string name="text_save">Save</string>
    <string name="warning_do_you_want_to_delete">Do you want to delete</string>
    <string name="text_deleting">Deleting &#8230;</string>
    <string name="text_saving">Saving &#8230;</string>
    <string name="text_warning">Warning</string>
    <string name="text_positive">Yes</string>
    <string name="text_negative">No</string>
</resources>
