<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ha.aplace.activity.AddEditActivity">

    <ImageView
        android:id="@+id/imgAddEditAct_PlacePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/no_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtAddEditAct_PlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_place_name"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgAddEditAct_PlacePicture"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtAddEditAct_PlaceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_fill_in_place_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddEditAct_PlaceName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txtAddEditAct_PlaceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_place_address"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAddEditAct_PlaceName"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtAddEditAct_PlaceAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hint_fill_in_place_address"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAddEditAct_PlaceAddress" />

    <TextView
        android:id="@+id/txtAddEditAct_PlaceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_place_description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtAddEditAct_PlaceAddress"
        android:layout_marginLeft="8dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtAddEditAct_PlaceDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/hint_fill_in_place_description"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAddEditAct_PlaceDescription" />

    <Button
        android:id="@+id/btnAddEditAct_Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_save"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/edtAddEditAct_PlaceDescription"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
